Fixed text alignment on controls and on drop downs

--- a/app/assets/stylesheets/controls.css.scss
+++ b/app/assets/stylesheets/controls.css.scss
@@ -12,6 +12,9 @@
   
   table {
     width: 100%;
+    td.name {
+      text-align: left;
+    }
     td.choice {
       width: 20px;
       a {
