--- a/app/assets/stylesheets/topbar.css.scss
+++ b/app/assets/stylesheets/topbar.css.scss
@@ -24,6 +24,7 @@
     margin: 0;
     padding: 0;
     border: 1px solid #ccc;
+    text-align: left;
   
     a {
       display: block;
